# slambook

./: .gitignore  Makefile  README.md
ch2/: README.md  helloSLAM.cpp
ch3/: README.md
ch3/useEigen/: CMakeLists.txt  eigenMatrix.cpp
ch3/useGeometry/: CMakeLists.txt
ch3/visualizeGeometry/: CMakeLists.txt
ch4/: README.md
ch4/useSophus/: CMakeLists.txt  useSophus.cpp
